Changes some of the Activities to use R.string.id instead of figuring out the ID at runtime. This is now possible because the new SDK Tools support libraries which can figure out the correct resource IDs at buildtime.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="test">test</string>
+    <!-- Some default values for dialogs -->
+    <string name="droidfu_progress_dialog_title">Progress Title</string>
+    <string name="droidfu_progress_dialog_message">Progress Dialog</string>
+    <string name="droidfu_error_dialog_title">Error Dialog</string>
+    <string name="droidfu_dialog_button_send_error_report">Send Error Report</string>
+
+    <string name="droidfu_error_report_email_address"></string>
+    <string name="droidfu_error_report_email_subject">Bug Report</string>
 </resources>
